"""Bazel module dependencies for registry.build"""

module(
    name = "registry_build",
    version = "0.0.0",
)

# Go rules for building Go binaries
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

# Configure Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# Import Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Make all Go dependencies visible
use_repo(
    go_deps,
    "com_github_yuin_goldmark",
)
