load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "settings_lib",
    srcs = ["settings.go"],
    importpath = "registry.build/tools/settings",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "settings",
    embed = [":settings_lib"],
    visibility = ["//visibility:public"],
)
