load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["update.go"],
    importpath = "registry.build/tools/tools",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
    ],
)

go_binary(
    name = "update",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
