load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tweet_lib",
    srcs = ["tweet.go"],
    importpath = "registry.build/tools/tweet",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_dghubble_oauth1//:oauth1",
        "@com_github_g8rswimmer_go_twitter_v2//:go-twitter",
    ],
)

go_binary(
    name = "tweet",
    embed = [":tweet_lib"],
    visibility = ["//visibility:public"],
)
